--- a/index.html
+++ b/index.html
@@ -41,37 +41,85 @@
 
         <!-- Card Groups -->
         <div class="card-group my-2">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card mx-2">
+              <img src="https://picsum.photos/200?random-1" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-body-secondary">Last updated 3 mins ago</small>
+                <h5 class="card-title">Product 1</h5>
+                <p class="card-text">Product Info Product Info Product Info Product Info Product Info Product Info Product Info Product Info</p>
+                <a href="http://#" class="btn btn-primary">Add to Cart</a>
               </div>
             </div>
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card mx-2">
+              <img src="https://picsum.photos/200?random-2" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-body-secondary">Last updated 3 mins ago</small>
+                <h5 class="card-title">Product 2</h5>
+                <p class="card-text">Product Info Product Info Product Info Product Info Product Info Product Info Product Info Product Info</p>
+                <a href="http://#" class="btn btn-primary">Add to Cart</a>
               </div>
             </div>
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card mx-2">
+              <img src="https://picsum.photos/200?random-3" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h5 class="card-title">Product 3</h5>
+                <p class="card-text">Product Info Product Info Product Info Product Info Product Info Product Info Product Info Product Info</p>
+                <a href="http://#" class="btn btn-primary">Add to Cart</a>
               </div>
-              <div class="card-footer">
-                <small class="text-body-secondary">Last updated 3 mins ago</small>
-              </div>
+            </div>
+        </div>
+
+        <div class="card-group my-2">
+          <div class="card mx-2">
+            <img src="https://picsum.photos/200?random-4" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Product 4</h5>
+              <p class="card-text">Product Info Product Info Product Info Product Info Product Info Product Info Product Info Product Info</p>
+              <a href="http://#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
+          <div class="card mx-2">
+            <img src="https://picsum.photos/200?random-5" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Product 5</h5>
+              <p class="card-text">Product Info Product Info Product Info Product Info Product Info Product Info Product Info Product Info</p>
+              <a href="http://#" class="btn btn-primary">Add to Cart</a>
+            </div>
+          </div>
+          <div class="card mx-2">
+            <img src="https://picsum.photos/200?random-6" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Product 6</h5>
+              <p class="card-text">Product Info Product Info Product Info Product Info Product Info Product Info Product Info Product Info</p>
+              <a href="http://#" class="btn btn-primary">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-group my-2">
+          <div class="card mx-2">
+            <img src="https://picsum.photos/200?random-7" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Product 7</h5>
+              <p class="card-text">Product Info Product Info Product Info Product Info Product Info Product Info Product Info Product Info</p>
+              <a href="http://#" class="btn btn-primary">Add to Cart</a>
+            </div>
+          </div>
+          <div class="card mx-2">
+            <img src="https://picsum.photos/200?random-8" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Product 8</h5>
+              <p class="card-text">Product Info Product Info Product Info Product Info Product Info Product Info Product Info Product Info</p>
+              <a href="http://#" class="btn btn-primary">Add to Cart</a>
+            </div>
+          </div>
+          <div class="card mx-2">
+            <img src="https://picsum.photos/200?random-9" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Product 9</h5>
+              <p class="card-text">Product Info Product Info Product Info Product Info Product Info Product Info Product Info Product Info</p>
+              <a href="http://#" class="btn btn-primary">Add to Cart</a>
+            </div>
+          </div>
+        </div>
 
     </div>
 
